--- a/lasercontrol_qt/mainwindow.ui
+++ b/lasercontrol_qt/mainwindow.ui
@@ -17,10 +17,10 @@
    <widget class="QPushButton" name="on_button">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>150</y>
-      <width>113</width>
-      <height>32</height>
+      <x>210</x>
+      <y>130</y>
+      <width>131</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -30,10 +30,10 @@
    <widget class="QPushButton" name="off_button">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>150</y>
-      <width>113</width>
-      <height>32</height>
+      <x>40</x>
+      <y>130</y>
+      <width>131</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
@@ -43,14 +43,14 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>100</y>
-      <width>81</width>
-      <height>16</height>
+      <x>140</x>
+      <y>60</y>
+      <width>101</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>Turn Laser</string>
+     <string>Toggle Laser:</string>
     </property>
    </widget>
   </widget>
@@ -60,7 +60,7 @@
      <x>0</x>
      <y>0</y>
      <width>400</width>
-     <height>22</height>
+     <height>27</height>
     </rect>
    </property>
   </widget>
